--- a/task12/task3/style.css
+++ b/task12/task3/style.css
@@ -21,5 +21,6 @@
 .rating_red-black {
   background: linear-gradient(to right, red 50%, black 50%);
   background-clip: text;
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
